# spanner-sqlalchemy-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker_build.yaml  pytest_flake8.yaml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 609cb35fa330_initial_migration.py  dummy.txt
tests/: conftest.py  insert_data.py  spanner_emulator_setup.sh  spanner_emulator_teardown.sh  test_app.py
