[tool.poetry]
name = "spanner-sqlalchemy-demo"
version = "0.1.0"
description = ""
authors = ["kazshinohara <kazshinohara@gcpx.org>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy-spanner = "^1.6.2"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.10.3"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
mypy = "^1.2"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
names = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
